--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GROUP 3 - FOUR LEAF CLOVER</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href= 
+    "imgs/fourleaf.png" type="image/x-icon"> 
 </head>
 <body>
     <header>
@@ -19,7 +21,7 @@
     <div class="bg-title">
         <img class="bg-img-1" src="imgs/bg-img-1.jpg" alt="flipping book">
         <h1>Welcome to our portfolio!</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, dignissimos. Quaerat a dolorem voluptatem, delectus nesciunt, corporis numquam provident est, quibusdam eum ut minima non distinctio natus doloremque animi dignissimos?</p>
+        <p>Hello! We are Group 3 from 12-STEM GERMANY. Explore a collection of group and member projects that showcase our creativity and skills in our subject CLPW. We're excited to share our work with you!</p>
     </div>
                     <!-- PROJECTS -->
     <div class="main-parent" id="group-projects">
