--- a/index.html
+++ b/index.html
@@ -21,33 +21,17 @@
     <div class="bg-title">
         <img class="bg-img-1" src="imgs/bg-img-1.jpg" alt="flipping book">
         <h1>Welcome to our portfolio!</h1>
-        <p>Hello! We are Group 3 from 12-STEM GERMANY. Explore a collection of group and member projects that showcase our creativity and skills in our subject CLPW. We're excited to share our work with you!</p>
+        <p>Hello! We are <b> Group 3</b> from <b>12-STEM GERMANY</b>. Explore a collection of group and member projects that showcase our creativity and skills in our subject CLPW. We're excited to share our work with you!</p>
     </div>
                     <!-- PROJECTS -->
     <div class="main-parent" id="group-projects">
         <h2>Group Projects</h2>
         <div class="projs-container">
             <div class="project">
-                <h3>Project 1</h3>
-                <p>a description</p>
+                <h3>Element Remix Project</h3>
+                <p>In this section, our group created a modern adaptation of classic Philippine fiction, <b>"Banaag at Sikat"</b> by <b>Lope K. Santos</b> in a poetry form to demonstrate our understanding of the original elements.</p>
                 <div class="bg-link">
-                    <p><a href="#" target="_blank">View Project</a></p>
-                </div>
-            </div>
-
-            <div class="project">
-                <h3>Project 2</h3>
-                <p>a description</p>
-                <div class="bg-link">
-                    <p><a href="#" target="_blank">View Project</a></p>
-                </div>
-            </div>
-
-            <div class="project">
-                <h3>Project 3</h3>
-                <p>a description</p>
-                <div class="bg-link">
-                    <p><a href="#" target="_blank">View Project</a></p>
+                    <p><a href="remixproj/remix.html" target="_blank">View Project</a></p>
                 </div>
             </div>
         </div>
