--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h3>Element Remix Project</h3>
                 <p>In this section, our group created a modern adaptation of classic Philippine fiction, <b>"Banaag at Sikat"</b> by <b>Lope K. Santos</b> in a poetry form to demonstrate our understanding of the original elements.</p>
                 <div class="bg-link">
-                    <p><a href="remixproj/remix.html" target="_blank">View Project</a></p>
+                    <p><a href="remixproj/remix0.html" target="_blank">View Project</a></p>
                 </div>
             </div>
         </div>
