--- a/index.html
+++ b/index.html
@@ -34,6 +34,20 @@
                     <p><a href="remixproj/remix0.html" target="_blank">View Project</a></p>
                 </div>
             </div>
+            <div class="project">
+                <h3>Group Presentation</h3>
+                <p>In this section shows a canva presentation of our assigned literature, <b>"European Literature"</b> for a backdrop in our roleplay presentation.</p>
+                <div class="bg-link">
+                    <p><a href="https://www.canva.com/design/DAF5MNF_Jts/w8iqeoZ7vuwP3jzVqODPjw/view?utm_content=DAF5MNF_Jts&utm_campaign=designshare&utm_medium=link&utm_source=editor" target="_blank">View Project</a></p>
+                </div>
+            </div>
+            <div class="project">
+                <h3>Handout of Group Report</h3>
+                <p>In this section shows a handout of our assigned literature, <b>"European Literature"</b> </p>
+                <div class="bg-link">
+                    <p><a href="https://drive.google.com/file/d/1YHvYadGqQtTQI5Zv_pEC5KtKagIywCcg/view?usp=drive_link" target="_blank">View Project</a></p>
+                </div>
+            </div>
         </div>
     </div>
                     <!-- MEMBERS -->
@@ -43,84 +57,42 @@
             <div class="member">
                 <h3>Christian Lloyd J. Mejias</h3>
                 <div id="dropdown">
-                    <p>View Projects ↓</p>
-                    <div class="hidden-container">
-                        <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
-                    </div>
+                    <a href="indiv-projs/mejias.html" target="_blank">View Projects</a>
                 </div>
             </div>
 
             <div class="member">
                 <h3>Jazarah Dea E. Caranto</h3>
                 <div id="dropdown">
-                    <p>View Projects ↓</p>
-                    <div class="hidden-container">
-                        <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
-                    </div>
+                    <a href="indiv-projs/caranto.html" target="_blank">View Projects</a>
                 </div>
             </div>
 
             <div class="member">
                 <h3>John Nathan S. Neri</h3>
                 <div id="dropdown">
-                    <p>View Projects ↓</p>
-                    <div class="hidden-container">
-                        <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
-                    </div>
+                    <a href="indiv-projs/neri.html" target="_blank">View Projects</a>
                 </div>
             </div>
 
             <div class="member">
                 <h3>John Benedict C. Jamot</h3>
                 <div id="dropdown">
-                    <p>View Projects ↓</p>
-                    <div class="hidden-container">
-                        <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
-                    </div>
+                    <a href="indiv-projs/jamot.html" target="_blank">View Projects</a>
                 </div>
             </div>
 
             <div class="member">
                 <h3>Francis Clark John P. Libao</h3>
                 <div id="dropdown">
-                    <p>View Projects ↓</p>
-                    <div class="hidden-container">
-                        <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
-                    </div>
+                    <a href="indiv-projs/libao.html" target="_blank">View Projects</a>
                 </div>
             </div>
 
             <div class="member">
                 <h3>Khel Ian C. Saballa</h3>
                 <div id="dropdown">
-                    <p>View Projects ↓</p>
-                    <div class="hidden-container">
-                        <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
-                    </div>
+                    <a href="indiv-projs/saballa.html" target="_blank">View Projects</a>
                 </div>
             </div>
         </div>
