--- a/indiv-projs/caranto.html
+++ b/indiv-projs/caranto.html
@@ -8,20 +8,20 @@
 </head>
 <body>
     <header>
-        <h2>GROUP 3 🍀 - CLPW</h2>
+        <h2><a href="https://aezkm12.github.io/CLPW-Website-Group-3/" target="_blank">GROUP 3 🍀 - CLPW</a></h2>
     </header>
     <main>
         <div class="about-me">
-            <img src=" " alt="">
+            <img src="imgs/caranto.jpg" alt="caranto">
             <h1>Jazarah Dea E. Caranto</h1>
-            <p></p>
+            <p>Maybe I am a quiet person. But you can hear me shout through the lines I craft. You can see me dance through the strokes of my pen. Through the volume of my words, my soul whispers unto ears of many. Hoping to leave a mark with the echoes of my heart.</p>
         </div>
         <div class="projects">
             <h1>Projects</h1>
             <div class="files">
-                <a href="" target="_blank">🍀 Original Poetry</a>
-                <a href="" target="_blank">🍀 Literary Lightbulb</a>
-                <a href="" target="_blank">🍀 Literary Lens</a>
+                <a href="https://drive.google.com/file/d/1NP2XUhc0Mh3bMV4BKmLTjrDqJbHR48fJ/view?usp=drive_link" target="_blank">🍀 Original Poetry</a>
+                <a href="https://drive.google.com/file/d/10WWsNxF__UsKa6w2R7WczvHQSihRXLPt/view?usp=drive_link" target="_blank">🍀 Literary Lightbulb</a>
+                <a href="https://drive.google.com/file/d/1yeG-zp4o-pKEI59FPbQIpQYwv-I4udha/view?usp=drive_link" target="_blank">🍀 Literary Lens</a>
             </div>
         </div>
     </main>
