--- a/indiv-projs/saballa.html
+++ b/indiv-projs/saballa.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h2>GROUP 3 🍀 - CLPW</h2>
+        <h2><a href="https://aezkm12.github.io/CLPW-Website-Group-3/" target="_blank">GROUP 3 🍀 - CLPW</a></h2>
     </header>
     <main>
         <div class="about-me">
